# furious-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test-and-lint.yml  test.yml
src/furious/cli/: config.py  discover.py  exceptions.py  setup.py
src/furious/cli/commands/: run.py  shell.py
tests/sandbox/: pyproject.toml
tests/sandbox/app/: main.py
